[project]
name = "decimify"
version = "0.2.9"
description = "Parse numbers with different formatting to builtin python Decimal."
authors = [{ name = "Zahid Kizmaz", email = "tech@zahid.rocks" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy==1.14.1", "pre-commit==4.0.1", "pytest==8.3.4", "ruff==0.8.6"]

[tool.ruff]
line-length = 88
target-version = "py313"

lint.select = [
  "I",   # isort
  "PL",  # pylint
  "F",   # pyflakes
  "UP",  # pyupgrade
  "ERA", # eradicate
  "D",   # pydocstyle
  "PIE", # flake8-pie
  "N",   # pep8-naming
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PTH", # flake8-use-pathlib
  "E",   # pycodestyle errors
  "RUF", # ruff-specific rules
  "PT",  # flake8-pytest-style
  "W",   # pycodestyle warnings
  "C4",  # flake8-comprehensions
  "ARG", # flake8-unused-arguments
]
lint.ignore = ["D1"] # pydocstyle missing docs

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ARG002"]
"__init__.py" = ["PLC0414"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
